# baxter_h2r_packages

./: .gitignore  CMakeLists.txt~  README.md  README.md~  VelocityJointTrajectoryActionServer.cfg  baxter.procman  baxter.urdf  configure  h2r.rosinstall  ork.rosinstall  package.xml  package.xml~
baxter_grasps_server/: CMakeLists.txt  README.md  package.xml  setup.py
baxter_grasps_server/grasps/ball/: ball.yaml
baxter_grasps_server/grasps/blue_bowl/: blue_bowl.yaml
baxter_grasps_server/grasps/butter_bowl/: butter_bowl.yaml
baxter_grasps_server/grasps/cocoa_bowl/: cocoa_bowl.yaml
baxter_grasps_server/grasps/coconut/: coconut.yaml
baxter_grasps_server/grasps/coconut_can/: coconut_can.yaml
baxter_grasps_server/grasps/flour_bowl/: flour_bowl.yaml
baxter_grasps_server/grasps/green_bowl/: green_bowl.yaml
baxter_grasps_server/grasps/gyrobowl/: gyrobowl.yaml
baxter_grasps_server/grasps/mixing_bowl/: mixing_bowl.yaml
baxter_grasps_server/grasps/mixing_bowl_1/: mixing_bowl_1.yaml
baxter_grasps_server/grasps/mixing_bowl_2/: mixing_bowl_2.yaml
baxter_grasps_server/grasps/pink_bowl/: pink_bowl.yaml
baxter_grasps_server/grasps/plastic_spoon/: plastic_spoon.yaml  whisk.yaml
baxter_grasps_server/grasps/spatula/: spatula.yaml
baxter_grasps_server/grasps/spoon/: spoon.yaml
baxter_grasps_server/grasps/sugar_bowl/: sugar_bowl.yaml
baxter_grasps_server/grasps/whisk/: whisk.yaml
baxter_grasps_server/grasps/white_sugar_bowl/: white_sugar_bowl.yaml
baxter_grasps_server/grasps/wooden_spoon/: wooden_spoon.yaml
baxter_grasps_server/grasps/yellow_bowl/: yellow_bowl.yaml
baxter_grasps_server/launch/: marker_annotator.launch  server.launch
baxter_grasps_server/nodes/: grasp_client.py  grasp_server.py  grasp_visualizer.py
baxter_grasps_server/scripts/: cylinder_grasp_generator.py  fixed_grasp_annotator.py  grasp_annotator.py  marker_grasp_annotator.py  sphere_grasp_generator.py
baxter_grasps_server/src/baxter_grasps_server/: grasping_helper.py
baxter_grasps_server/srv/: GraspService.srv
baxter_h2r_packages/: CMakeLists.txt  package.xml
baxter_kinect_calibration/: CMakeLists.txt  CMakeLists.txt~  README.md  individualmarkerscalibrate.h  mainpage.dox  manifest.xml  manifest.xml~  package.xml  package.xml~
baxter_kinect_calibration/bundles/: Tags1Through9.xml  Tags1Through9.xml~
baxter_kinect_calibration/conf/: baxter_left.yaml  depth_A00362910274112A.yaml  rgb_A00362910274112A.yaml
baxter_kinect_calibration/include/baxter_kinect_calibration/: detect_calibration_pattern.h  detect_calibration_pattern.h~
baxter_kinect_calibration/launch/: baxter_bundle.launch  baxter_bundle_calibrate.launch  baxter_bundle_calibrate.launch~  baxter_bundle_calibrate_2.launch  baxter_bundle_calibrate_head.launch  baxter_bundle_calibrate_no_openni.launch  baxter_bundle_calibrate_right.launch  baxter_indiv.launch  baxter_left_camera_alvar.launch  baxter_left_camera_alvar.launch~  baxter_ork_indiv.launch  baxter_right_camera_alvar.launch  baxter_right_camera_alvar.launch~  frames.gv  head_kinect_calibrate.launch  kinect_alvar.launch  kinect_alvar.launch~  pr2_bundle_no_kinect.launch  pr2_bundle_no_kinect.launch~  table_kinect2_calibrate.launch  table_kinect_calibrate.launch
baxter_kinect_calibration/scripts/: alvar_check.py  change_left_camera_resolution.sh  setup_robot_left.sh
baxter_kinect_calibration/src/: calibrate_kinect_alvar.cpp  calibrate_kinect_alvar.cpp~  calibrate_kinect_alvar_bundle  calibrate_kinect_alvar_bundle.cpp  calibrate_kinect_alvar_bundle.cpp~  calibrate_kinect_arm_checkerboard.cpp  calibrate_kinect_arm_checkerboard.cpp~  calibrate_kinect_checkerboard.cpp  calibrate_kinect_checkerboard.cpp~  camera_info.cpp  detect_calibration_pattern.cpp  detect_calibration_pattern.cpp~  individualMarkersCalibrate.cpp
baxter_packages/: CMakeLists.txt  package.xml
baxter_pick_and_place/: CMakeLists.txt  README.md  package.xml  setup.py
baxter_pick_and_place/include/baxter_pick_and_place/: object_scene_interface.h
baxter_pick_and_place/scripts/: add_object.py  marker_move.py  marker_pick_place.py  move_to_pose.py  place.py  warehouse_client.py
baxter_pick_and_place/src/: marker_pick_place.cpp  move_helper.py  warehouse_pick_place.cpp
baxter_pick_and_place/src/baxter_pick_and_place/: move_helper.py
baxter_speech_command/: CMakeLists.txt  README  package.xml
baxter_speech_command/devel/: .catkin  .rosinstall  setup.sh
baxter_speech_command/devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
baxter_speech_command/devel/lib/pkgconfig/: baxter_speech_command.pc
baxter_speech_command/devel/share/baxter_speech_command/cmake/: baxter_speech_commandConfig.cmake
baxter_speech_command/scripts/: speech_to_text.py
baxter_speech_command/src/: CMakeLists.txt  package.xml  tempKeystore  text_to_command.py
baxter_speech_command/src/baxter_speech_command/launch/: speaker.launch
baxter_speech_command/src/baxter_speech_command/src/: demo.xml  speech_to_text.py
baxter_speech_command/src/baxter_speech_command/src/javadoc/: index.html
baxter_speech_command/src/javadoc/: constant-values.html  deprecated-list.html  overview-summary.html  overview-tree.html
baxter_speech_command/src/models/language/wsj/: 5k_words.vocab
baxter_speech_command/src/src/jsapi2/javax.speech/: JSR113 Distribution.launch  build.properties
meldon_detection/: CMakeLists.txt  README.md  README.txt  package.xml
meldon_detection/ObjectnessTrainedModel/: ObjNessB2W8HSV.idx.yml  ObjNessB2W8HSV.wS2.yml  ObjNessB2W8I.idx.yml  ObjNessB2W8I.wS1.yml  ObjNessB2W8MAXBGR.idx.yml  ObjNessB2W8MAXBGR.wS1.yml
meldon_detection/msg/: RecognizedObject.msg  RecognizedObjectArray.msg
meldon_detection/src/: joberlin_detection.cpp  readme  talker.cpp
meldon_detection/src/kdes/: COPYRIGHT.txt  README.txt  install-dependencies.sh
meldon_detection/src/kdes/KernelDescriptors_CPU/: Makefile  computekdes.cc  kernelmain.cc  libkerneldesc.cc  libkerneldesc.h  matop.cc  mattest.cc  mattest.h
meldon_detection/trained_model/: ObjNessB2W8HSV.wS1.yml  ObjNessB2W8I.wS2.yml  ObjNessB2W8MAXBGR.wS2.yml
(+1699 files in other folders)
