<package>
  <name>baxter_packages</name>
  <version>0.1.0</version>
  <description>
    Metapackage for Brown CS H2R baxter hackamegathon
  </description>
  <maintainer email="brawener@cs.brown.edu">Stephen Brawner</maintainer>
  <license>BSD</license>

  <url>http://github.com/h2r/baxter_packages</url>
  <author>h2r</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>baxter_kinect_calibration</run_depend>
  <run_depend>baxter_stt</run_depend>
  <run_depend>baxter_ork</run_depend>
  <export>
   <metapackage/>
 </export>
</package>
