<?xml version="1.0"?>
<package>
  <name>baxter_pick_and_place</name>
  <version>0.0.0</version>
  <description>The listen_and_grasp package</description>
  <maintainer email="ng@todo.todo">ng</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>baxter_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>baxter_grasps_server</build_depend>
  <build_depend>baxter_props</build_depend>
  <build_depend>baxter_tools</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>baxter_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>baxter_grasps_server</run_depend>
  <run_depend>baxter_props</run_depend>
  <run_depend>baxter_tools</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>