<?xml version="1.0"?>
<package>
  <name>baxter_speech_command</name>
  <version>0.1.0</version>
  <description>Send speech commands to Baxter using CMU Sphinx</description>
  <maintainer email="David_Abel@Brown.edu">Dave Abel</maintainer>
  <license>BSD</license>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
